# efm32hg-pac

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  readme.md
devices/: EFM32HG309F64.yaml
src/: acmp0.rs  adc0.rs  aes.rs  cmu.rs  devinfo.rs  dma.rs  emu.rs  gpio.rs  i2c0.rs  idac0.rs  leuart0.rs  lib.rs  msc.rs  mtb.rs  pcnt0.rs  prs.rs  rmu.rs  rtc.rs  timer1.rs  timer2.rs  usart0.rs  usart1.rs  usb.rs  vcmp.rs  wdog.rs
src/acmp0/: ctrl.rs  if_.rs  ifc.rs  ifs.rs  inputsel.rs  route.rs  status.rs
src/adc0/: biasprog.rs  cal.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  scanctrl.rs  scandata.rs  scandatap.rs  singlectrl.rs  singledata.rs  singledatap.rs  status.rs
src/aes/: cmd.rs  ctrl.rs  data.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  keyla.rs  keylb.rs  keylc.rs  keyld.rs  status.rs  xordata.rs
src/cmu/: auxhfrcoctrl.rs  calcnt.rs  calctrl.rs  cmd.rs  ctrl.rs  hfcoreclkdiv.rs  hfcoreclken0.rs  hfperclkdiv.rs  hfperclken0.rs  hfrcoctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lfaclken0.rs  lfapresc0.rs  lfbclken0.rs  lfbpresc0.rs  lfcclken0.rs  lfclksel.rs  lfrcoctrl.rs  lock.rs  oscencmd.rs  pcntctrl.rs  route.rs  status.rs  syncbusy.rs  usbcrctrl.rs  ushfrcoconf.rs  ushfrcoctrl.rs  ushfrcotune.rs
src/devinfo/: _reserved.rs  adc0cal0.rs  adc0cal1.rs  adc0cal2.rs  auxhfrcocal0.rs  auxhfrcocal1.rs  cal.rs  hfrcocal0.rs  hfrcocal1.rs  idac0cal0.rs  meminfo.rs  msize.rs  part.rs  uniqueh.rs  uniquel.rs  ushfrcocal0.rs
src/dma/: altctrlbase.rs  ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs  ch4_ctrl.rs  ch5_ctrl.rs  chaltc.rs  chalts.rs  chenc.rs  chens.rs  chpric.rs  chpris.rs  chreqmaskc.rs  chreqmasks.rs  chreqstatus.rs  chsreqstatus.rs  chswreq.rs  chuseburstc.rs  chusebursts.rs  chwaitstatus.rs  config.rs  ctrlbase.rs  errorc.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  status.rs
src/emu/: auxctrl.rs  ctrl.rs
src/gpio/: cmd.rs  ctrl.rs  em4wucause.rs  em4wuen.rs  em4wupol.rs  extifall.rs  extipselh.rs  extipsell.rs  extirise.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  insense.rs  lock.rs  pa_ctrl.rs  pa_din.rs  pa_dout.rs  pa_doutclr.rs  pa_doutset.rs  pa_douttgl.rs  pa_modeh.rs  pa_model.rs  pa_pinlockn.rs  pb_ctrl.rs  pb_din.rs  pb_dout.rs  pb_doutclr.rs  pb_doutset.rs  pb_douttgl.rs  pb_modeh.rs  pb_model.rs  pb_pinlockn.rs  pc_ctrl.rs  pc_din.rs  pc_dout.rs  pc_doutclr.rs  pc_doutset.rs  pc_douttgl.rs  pc_modeh.rs  (+30 more)
src/i2c0/: clkdiv.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  route.rs  rxdatap.rs  saddr.rs  saddrmask.rs  state.rs  status.rs
src/idac0/: cal.rs  ctrl.rs  curprog.rs  dutyconfig.rs
tools/: Cargo.toml
(+205 files in other folders)
